Fix compatible issues
Signed-off-by: Gao Hongtao <hanahmily@gmail.com>