@@ -27,9 +27,11 @@ import org.junit.After;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
+
+import com.google.common.collect.ImmutableSet;
+import com.google.common.collect.Lists;
+
 import java.io.IOException;
-import java.util.List;
-import java.util.Set;
 import java.util.concurrent.TimeUnit;
 
 import org.apache.skywalking.banyandb.common.v1.BanyandbCommon;
@@ -161,7 +163,7 @@ public class ITBanyanDBPropertyTests extends BanyanDBClientTestCI {
         Assert.assertTrue(this.client.apply(property).getCreated());
 
         await().atMost(10, TimeUnit.SECONDS).untilAsserted(() -> {
-            client.query(new PropertyQuery(List.of("default"), "sw", Set.of("name")).build(null));
+            client.query(new PropertyQuery(Lists.newArrayList("default"), "sw", ImmutableSet.of("name")).build(null));
             BanyandbProperty.QueryResponse resp = client.query(BanyandbProperty.QueryRequest.newBuilder()
                     .addGroups("default")
                     .setName("sw")
@@ -199,17 +201,17 @@ public class ITBanyanDBPropertyTests extends BanyanDBClientTestCI {
         Assert.assertTrue(this.client.apply(property).getCreated());
 
         await().atMost(10, TimeUnit.SECONDS).untilAsserted(() -> {
-            BanyandbProperty.QueryResponse resp = client.query(new PropertyQuery(List.of("default"), "sw", Set.of("name")).build());
+            BanyandbProperty.QueryResponse resp = client.query(new PropertyQuery(Lists.newArrayList("default"), "sw", ImmutableSet.of("name")).build());
             Assert.assertEquals(2, resp.getPropertiesCount());
         });
         await().atMost(10, TimeUnit.SECONDS).untilAsserted(() -> {
-            PropertyQuery pQuery = new PropertyQuery(List.of("default"), "sw", Set.of("name"));
+            PropertyQuery pQuery = new PropertyQuery(Lists.newArrayList("default"), "sw", ImmutableSet.of("name"));
             pQuery.criteria(PairQueryCondition.StringQueryCondition.eq("name", "foo"));
             BanyandbProperty.QueryResponse resp = client.query(pQuery.build());
             Assert.assertEquals(1, resp.getPropertiesCount());
         });
         await().atMost(10, TimeUnit.SECONDS).untilAsserted(() -> {
-            PropertyQuery pQuery = new PropertyQuery(List.of("default"), "sw", Set.of("name"));
+            PropertyQuery pQuery = new PropertyQuery(Lists.newArrayList("default"), "sw", ImmutableSet.of("name"));
             pQuery.criteria(Or.create(PairQueryCondition.StringQueryCondition.eq("name", "foo"), 
             PairQueryCondition.StringQueryCondition.eq("name", "bar")));
             BanyandbProperty.QueryResponse resp = client.query(pQuery.build());
